--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 			<div class="card">
 				<img class="card-img-top" src="Images\VisualSort.jpg" alt="Card image cap">
 				<div class="card-body text-left small">
-					<h4 class="card-title midText">Sorting Visualiser</h4>
-					<p class="card-text smallText">This webpage visualises different sorting algorithms and makes it easy to understand the efficiencies of them in different environments.</p>
+					<h4 class="card-title">Sorting Visualiser</h4>
+					<p class="card-text">This webpage visualises different sorting algorithms and makes it easy to understand the efficiencies of them in different environments.</p>
 					<a href="VisualSort.html" class="stretched-link"></a>
 				</div>
 			</div>
 			<div class="card">
 				<img class="card-img-top" src="Images\Dashboard.jpg" alt="Card image cap">
 				<div class="card-body text-left small">
-					<h4 class="card-title midText">Dashboard</h4>
-					<p class="card-text smallText">This webpage consists of graphs and tables to show data, which can be edited and is saved locally on your device.</p>
+					<h4 class="card-title">Dashboard</h4>
+					<p class="card-text">This webpage consists of graphs and tables to show data, which can be edited and is saved locally on your device.</p>
 					<a href="Dashboard/index.html" class="stretched-link"></a>
 				</div>
 			</div>
