--- a/VisualSort.html
+++ b/VisualSort.html
@@ -47,8 +47,15 @@
   background: #4CAF50;
   cursor: pointer;
 }
+
 * {
   border-radius: 0 !important;
+}
+
+.dropdown-menu.dropdown-menu-wide {
+  min-width: 100%;
+  text-align: center;
+  font-size: 2vh;
 }
 </style>
 <!-- BootStrap code from copied/modified from BootStrap documentation -->
@@ -89,13 +96,17 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 			<h1 class="display-4">Sorting Visualiser</h1><div style="height: 1%;"></div><input type="range" min="5" max="50" value="30" class="slider" id="ArrayChange"><p>number of values: <span id="value"></span></p>
 			<input type="range" min="10" max="1000" value="100" class="slider" id="SpeedChange"><p>Speed(ms): <span id="speed"></span></p>
 			<!-- Bar Chart -->
-	          	<div class="row btn-group d-flex p-2" role="group">
+	          	<div class="row btn-group d-flex pl-2 pr-2">
 					<button type="button" class="btn btn-secondary btn-lg" id="RandomArray">Random Unsorted</button>
 					<button type="button" class="btn btn-secondary border-left btn-lg" id="Array">Unsorted Array</button>
-					<button id="btnGroupDrop" type="button" class="btn btn-primary border-left btn-lg" data-toggle="dropdown">Choose Sorting Algorithm</button>	 
-					<div class="dropdown-menu" aria-labelledby="btnGroupDrop">
+				</div>
+				<div class="row btn-group d-flex p-2" role="group"> 
+					<button id="btnGroupDrop" type="button" class="btn btn-primary border-left btn-lg" data-toggle="dropdown">Choose Sorting Algorithm</button>	
+					<div class="dropdown-menu dropdown-menu-wide" aria-labelledby="btnGroupDrop">
 						<a class="dropdown-item" id="BubbleSort">Bubble Sort</a>
 						<a class="dropdown-item" id="SelectionSort">Selection Sort</a>
+						<a class="dropdown-item" id="InsertionSort">Insertion Sort</a>
+						<a class="dropdown-item" id="MergeSort">Merge Sort</a>
 						<a class="dropdown-item" id="QuickSort">Quick Sort</a>
 					</div>
 				</div>
@@ -163,7 +174,6 @@ function draw(type){
 	}
 	else {
 		fillArray();
-
 		for (var i = 0; i < height.length; i++){
        		Sort.data.datasets[0].data[i] = height[i]; 
 		}
@@ -191,7 +201,7 @@ var Sort = new Chart(ctx, {
     	},
     	maintainAspectRatio: false,
     	legend: {
-        display: false
+        	display: false
       	},
       	layout: {
         	padding: {
@@ -204,11 +214,14 @@ var Sort = new Chart(ctx, {
             	gridLines: {
               		display: false,
                 	drawBorder: false
-              	}
+              	},
+              	ticks: {
+              		display: false,
+              	},
             }],
             yAxes: [{
                 ticks: {
-                    beginAtZero: true
+                    beginAtZero: true,
                 },
                 gridLines: {
                     color: "rgb(234, 236, 244)",
@@ -222,20 +235,22 @@ var Sort = new Chart(ctx, {
     }
 });
 // Sorting Algorithms
-async function bubbleSort(){ // Works
+async function bubbleSort(){
 	var len = height.length;
 	for (var i = len-1; i>=0; i--){
 		for(var j = 1; j<=i; j++){
 			if(height[j-1] > height[j]){
-				Sort.data.datasets[0].backgroundColor[j] = "blue";
-				Sort.update();
-				await sleep(speedRange.value);
 				var temp = height[j-1];
 				height[j-1] = height[j];
 				height[j] = temp;
        			Sort.data.datasets[0].data[j] = height[j]; 
-       			Sort.data.datasets[0].data[j-1] = height[j-1]; 
+       			Sort.data.datasets[0].data[j-1] = height[j-1];
+       			Sort.data.datasets[0].backgroundColor[j] = "green";
+				Sort.data.datasets[0].backgroundColor[j - 1] = "blue";
+				Sort.update();
+				await sleep(speedRange.value);
 				Sort.data.datasets[0].backgroundColor[j] = "#eb4034";
+				Sort.data.datasets[0].backgroundColor[j - 1] = "#eb4034";
        			Sort.update();
 				await sleep(speedRange.value);
 				document.getElementById("numOfSwaps").innerHTML = swaps += 1;
@@ -250,7 +265,8 @@ async function selectionSort(){ // Done
 	for(var i = 0; i < len; i++){
 		minIdx = i;
 		for(var j = i+1; j<len; j++){
-			Sort.data.datasets[0].backgroundColor[minIdx] = "blue";
+			Sort.data.datasets[0].backgroundColor[i] = "blue";
+			Sort.data.datasets[0].backgroundColor[minIdx] = "green";
 			Sort.update();
 			if(height[j] < height[minIdx]){
 				await sleep(speedRange.value);
@@ -261,6 +277,7 @@ async function selectionSort(){ // Done
 			}
 			document.getElementById("numOfComp").innerHTML = compares += 1;
 		}
+		Sort.data.datasets[0].backgroundColor[i] = "#eb4034";
 		temp = height[i];
 		height[i] = height[minIdx];
 		height[minIdx] = temp;
@@ -271,55 +288,125 @@ async function selectionSort(){ // Done
 	}
 }
 
-async function quickSort(height, left, right){
-	swaps = 0; compares = 0; x = 10;
+async function insertionSort(height){
+  	for(let i = 1; i < height.length; i++){
+	    let j = i - 1;
+	    let temp = height[i];
+	    while(j >= 0 && height[j] > temp){
+	    	height[j + 1] = height[j];
+	    	Sort.data.datasets[0].data[j + 1] = height[j];
+	    	Sort.data.datasets[0].backgroundColor[j + 1] = "green";
+	    	Sort.data.datasets[0].backgroundColor[j] = "blue";
+	    	Sort.update();
+	    	await sleep(speedRange.value);
+	    	Sort.data.datasets[0].backgroundColor[j] = "#eb4034";
+	    	Sort.data.datasets[0].backgroundColor[j + 1] = "#eb4034";
+	      	j--;
+	      	document.getElementById("numOfSwaps").innerHTML = swaps += 1;	
+	      	document.getElementById("numOfComp").innerHTML = compares += 1;
+	   	}
+	   	height[j + 1] = temp;
+	   	Sort.data.datasets[0].data[j + 1] = temp;
+	   	document.getElementById("numOfComp").innerHTML = compares += 1;
+	}
+	Sort.update();
+}
+
+function mergeSort(height) { // Bottom Up Merge sort
+	var sorted = height.slice(),
+		n = sorted.length,
+		buffer = new Array(n);
+	for (var size = 1; size < n; size *= 2) {
+		for (var leftStart = 0; leftStart < n; leftStart += 2*size) {
+			var left = leftStart,
+				right = Math.min(left + size, n),
+				leftLimit = right,
+				rightLimit = Math.min(right + size, n),
+				i = left;
+			while (left < leftLimit && right < rightLimit) {
+				if (sorted[left] <= sorted[right]) {
+				  buffer[i++] = sorted[left++];
+				} else {
+				  buffer[i++] = sorted[right++];
+				}
+			}
+			while (left < leftLimit) {
+			  buffer[i++] = sorted[left++];
+			}
+			while (right < rightLimit) {
+			  buffer[i++] = sorted[right++];
+			}
+		}
+	var temp = sorted,
+		sorted = buffer,
+		buffer = temp;}
+	return sorted;
+}
+
+async function quickSort(height, left, right){ 
    	var len = height.length, 
    	pivot,
    	partitionIndex;
   	if(left < right){
+  		document.getElementById("numOfComp").innerHTML = compares += 1;
     	pivot = right;
-    	partitionIndex = partition(height, pivot, left, right);
+    	partitionIndex = await partition(height, pivot, left, right);
    		//sort left and right
-   		quickSort(height, left, partitionIndex - 1);
-   		quickSort(height, partitionIndex + 1, right);
+   		await quickSort(height, left, partitionIndex - 1);
+   		await quickSort(height, partitionIndex + 1, right);
   	}
   	return height;
 }
 
-async function partition(height, pivot, left, right){
-   var pivotValue = height[pivot],
-       partitionIndex = left;
-   console.log(height);
-   for(var i = left; i < right; i++){
-    if(height[i] > pivotValue){
-      	swap(height, i, partitionIndex);
-      	partitionIndex++;
-    }
-  }
-  swap(height, right, partitionIndex);
-  return partitionIndex;
+async function partition(height, pivot, left, right){ 
+   	var pivotValue = height[pivot],
+    	partitionIndex = left;
+	for(var i = left; i < right; i++){
+   		if(height[i] < pivotValue){
+	      	await swap(height, i, partitionIndex);
+	      	partitionIndex++;	
+	      	document.getElementById("numOfSwaps").innerHTML = swaps += 1;
+    	}
+    	document.getElementById("numOfComp").innerHTML = compares += 1;
+  	}
+	await swap(height, right, partitionIndex);
+	document.getElementById("numOfSwaps").innerHTML = swaps += 1;
+	return partitionIndex;
 }
 
-async function swap(height, i, j){
-   	var temp = height[i];
-   	height[i] = height[j];
-   	height[j] = temp;
+async function swap(height, i, j){ 
+	var temp = height[i];
+	height[i] = height[j];
+	height[j] = temp;
+	Sort.data.datasets[0].backgroundColor[j] = "blue";
+	Sort.data.datasets[0].backgroundColor[i] = "green";
+	Sort.data.datasets[0].data[i] = height[i];
+	Sort.data.datasets[0].data[j] = height[j];
+	Sort.update();
+	await sleep(speedRange.value);
+	Sort.data.datasets[0].backgroundColor[j] = "#eb4034";
+	Sort.data.datasets[0].backgroundColor[i] = "#eb4034";
+	Sort.update();
 }
 // Waits a select period of time
 function sleep(ms) {
   return new Promise(resolve => setTimeout(resolve, ms));
 }
+
 $(document).ready(function(){
 	$("#RandomArray").click(function() {
+		nullifier();
 		randomArray = "True";
 		draw("");
 	});
 	$("#Array").click(function() {
+		nullifier();
 		randomArray = "False";
 		draw("");
 	});
 	// Sorting algorithms
 	$("#ArrayChange").change(function() {
+		nullifier();
 		draw("numberChange");
 	});
 	$("#BubbleSort").click(function(){
@@ -330,16 +417,24 @@ $(document).ready(function(){
 		nullifier();
 		selectionSort();
 	});
+	$("#InsertionSort").click(function(){
+		nullifier();
+		insertionSort(height);
+	});
+	$("#MergeSort").click(function(){
+		nullifier();
+		mergeSort(height);
+	});
 	$("#QuickSort").click(function(){
+		nullifier();
 		quickSort(height, 0, (height.length - 1));
 	});
 });
 </script>
 </body>
 </html>
-
 <!-- References
 Sleep: https://stackoverflow.com/questions/951021/what-is-the-javascript-version-of-sleep
 Sorting algorithms: https://khan4019.github.io/front-end-Interview-Questions/sort.html#selectionSort
-
+Bottom Up Merge Sort: https://stackoverflow.com/a/32041864
 -->
