--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
 <style>
+p {
+	font-size: 2vh;
+}
 .nav-link {
 	color: black;
 }
@@ -70,7 +73,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 				<div class="card-body text-left small">
 					<h4 class="card-title">Dashboard</h4>
 					<p class="card-text">This webpage consists of graphs and tables to show data, which can be edited and is saved locally on your device.</p>
-					<a href="Dashboard/index.html" class="stretched-link"></a>
+					<a href="dashboard.html" class="stretched-link"></a>
 				</div>
 			</div>
 		</div>
