--- a/VisualSort.html
+++ b/VisualSort.html
@@ -121,7 +121,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
               		<canvas id="Sort"></canvas>
            		</div>
 			<div class="row justify-content-center">
-				<p>Number of swaps:&nbsp;<p id="numOfSwaps"></p>&nbsp;|&nbsp;Number of compares:&nbsp;<p id="numOfComp"></p></p>
+				<p>Number of swaps:&nbsp;<p id="numOfSwaps"></p>&nbsp;|&nbsp;<p>Number of compares:</p>&nbsp;<p id="numOfComp"></p></p>
 			</div>
 		</div>
 	</div>
