--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 p {
 	font-size: 2vh;
 }
+
+.lead {
+	font-size: 3vh;
+}
+
 .nav-link {
 	color: black;
 }
@@ -26,6 +31,7 @@ p {
 </style>
 <!-- BootStrap code from copied/modified from BootStrap documentation -->
 <meta charset="utf-8">
+<meta name="google-site-verification" content="57ojS5ZUvzfapLNXZ3loOraMw3dSHtMuVi8pMCyi410" />
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
 integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -128,27 +134,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 					</div>
 					<div class="row pb-2">
 						<div class="col">
-							<p class="lead">Adobe Illustrator</p>
-						</div>
-						<div class="col-md-10 align-self-center">
-							<div class="progress" style="height:2.25vw;">
-								<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">intermediate</div>
-							</div>
-						</div>
-					</div>
-					<div class="row pb-2">
-						<div class="col">
-							<p class="lead">Adobe Photoshop</p>
-						</div>
-						<div class="col-md-10 align-self-center">
-							<div class="progress" style="height:2.25vw;">
-								<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">intermediate</div>
-							</div>
-						</div>
-					</div>
-					<div class="row pb-2">
-						<div class="col">
-							<p class="lead">Packet Tracer</p>
+							<p class="lead">Adobe Suite</p>
 						</div>
 						<div class="col-md-10 align-self-center">
 							<div class="progress" style="height:2.25vw;">
